# aztec-lint

./: CHANGELOG.md  CLIPPY_GAP_ANALYSIS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  Makefile  README.md  RESEARCH.md  SPEC.md
.github/workflows/: ci-docs.yml  ci-matrix.yml  ci-perf.yml  ci-quality.yml  ci-test.yml  release.yml
benchmarks/: budgets.toml  scenarios.toml
crates/aztec-lint-aztec/: Cargo.toml
crates/aztec-lint-aztec/src/: detect.rs  lib.rs  model_builder.rs  patterns.rs
crates/aztec-lint-aztec/src/taint/: graph.rs  mod.rs  propagate.rs
crates/aztec-lint-cli/: Cargo.toml
crates/aztec-lint-cli/src/: cli.rs  exit_codes.rs  main.rs
crates/aztec-lint-cli/src/commands/: aztec_scan.rs  catalog.rs  check.rs  explain.rs  fix.rs  mod.rs  rules.rs  update.rs
crates/aztec-lint-cli/tests/: cli_golden.rs  corpus_matrix.rs  fix_matrix.rs  ui_matrix.rs
crates/aztec-lint-cli/tests/support/: mod.rs
crates/aztec-lint-core/: Cargo.toml
crates/aztec-lint-core/src/: lib.rs
crates/aztec-lint-core/src/config/: loader.rs  mod.rs  types.rs
crates/aztec-lint-core/src/diagnostics/: fingerprint.rs  mod.rs  types.rs  validate.rs
crates/aztec-lint-core/src/fix/: apply.rs  mod.rs
crates/aztec-lint-core/src/lints/: mod.rs  types.rs
crates/aztec-lint-core/src/model/: aztec.rs  mod.rs  project.rs  semantic.rs  span.rs
crates/aztec-lint-core/src/noir/: call_graph.rs  driver.rs  mod.rs  project_builder.rs  semantic_builder.rs  span_mapper.rs
crates/aztec-lint-core/src/output/: ansi.rs  json.rs  mod.rs  sarif.rs  text.rs
crates/aztec-lint-core/src/plugin/: api.rs
crates/aztec-lint-core/src/policy/: mod.rs
crates/aztec-lint-core/src/vcs/: changed_only.rs  mod.rs
crates/aztec-lint-core/tests/: phase3_regression.rs  plugin_api_mock_crate.rs
crates/aztec-lint-rules/: Cargo.toml
crates/aztec-lint-rules/src/: lib.rs
crates/aztec-lint-rules/src/aztec/: aztec001_privacy_leak.rs  aztec002_secret_branching.rs  mod.rs  text_scan.rs  (+17 more)
crates/aztec-lint-rules/tests/: aztec_advanced_rules.rs  aztec_foundation_rules.rs  aztec_phase7_rules.rs  noir_core_rules.rs  phase3_scoped_levels.rs
crates/aztec-lint-sdk/: Cargo.toml
crates/aztec-lint-sdk/src/: lib.rs
crates/aztec-lint-sdk/tests/: mock_plugin_crate.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: common.rs  docs_portal.rs  lint_intake.rs  main.rs  new_lint.rs  perf_gate.rs  update_lints.rs
crates/xtask/templates/: rule.rs.tmpl  rule_fixture_negative.nr.tmpl  rule_fixture_positive.nr.tmpl  rule_fixture_suppressed.nr.tmpl
docs/: CLIPPY_GAP_ANALYSIS.md  NEW_LINTS.md  PHASE2_SEMANTIC_ENGINE_IMPLEMENTATION_PLAN.md  PHASE3_DIAGNOSTICS_AND_FIXES_IMPLEMENTATION_PLAN.md  PHASE4_SCALE_AND_QUALITY_IMPLEMENTATION_PLAN.md  SCALE_AND_QUALITY_IMPLEMENTATION_PLAN.md  SECOND_WAVE_IMPLEMENTATION_PLAN.md  architecture.md  clippy_phase1_integrity_metadata_plan.md  clippy_tip_generation_plan.md  configuration.md  lints-reference.md  plugin-api-v0.md  rule-authoring.md  rule-roadmap.md  suppression.md
docs/decisions/: 0001-aztec010-scope.md  0002-suppression-semantics.md  0003-confidence-model.md  0004-fix-safety-policy.md  0005-diagnostic-invariants-and-suggestion-groups.md  0006-scale-quality-contract.md
docs/portal/: index.md  search-index.json
docs/portal/lints/: aztec001.md  aztec002.md  aztec003.md  aztec010.md  aztec020.md  aztec021.md  aztec022.md  aztec030.md  aztec031.md  aztec032.md  aztec033.md  aztec034.md  aztec035.md  aztec036.md  aztec037.md  aztec038.md  aztec039.md  aztec040.md  aztec041.md  noir001.md  noir002.md  noir010.md  noir020.md  noir030.md  noir100.md  noir101.md  noir110.md  noir120.md
docs/portal/roadmap/: accepted.md  covered.md  deferred.md  index.md  rejected.md
fixtures/aztec/rule_cases/: aztec001_negative.nr  aztec001_positive.nr  aztec001_suppressed.nr  aztec002_effect_coupling_positive.nr  aztec002_negative.nr  aztec002_positive.nr  aztec002_suppressed.nr  aztec003_negative.nr  aztec003_positive.nr  aztec003_suppressed.nr  aztec010_cross_contract.nr  aztec010_negative.nr  aztec010_positive.nr  aztec020_negative.nr  aztec020_positive.nr  aztec020_suppressed.nr  aztec021_guard_after_hash_positive.nr  aztec021_negative.nr  aztec021_positive.nr  aztec021_suppressed.nr  aztec022_negative.nr  aztec022_positive.nr  aztec022_suppressed.nr  aztec030_false_positive_guard.nr  aztec030_negative.nr  aztec030_positive.nr  aztec030_suppressed.nr  aztec031_false_positive_guard.nr  aztec031_negative.nr  aztec031_positive.nr  aztec031_suppressed.nr  aztec032_false_positive_guard.nr  aztec032_negative.nr  aztec032_positive.nr  aztec032_suppressed.nr  aztec033_false_positive_guard.nr  aztec033_negative.nr  aztec033_positive.nr  aztec033_suppressed.nr  aztec034_false_positive_guard.nr  (+31 more)
fixtures/bench/: domain_separation_hash_tuple.nr  looped_hash_merkle_verification.nr  note_consumption_nullifier.nr
fixtures/noir_core/errors/: Nargo.toml
fixtures/noir_core/minimal/: Nargo.toml
fixtures/noir_core/rule_cases/: noir001_alias_import_negative.nr  noir001_negative.nr  noir001_suppressed.nr  noir002_negative.nr  noir002_nested_scope_positive.nr  noir002_positive.nr  noir002_suppressed.nr  noir010_negative.nr  noir010_positive.nr  noir010_suppressed.nr  noir020_branch_guard_negative.nr  noir020_guard_after_access_negative.nr  noir020_negative.nr  noir020_positive.nr  noir020_suppressed.nr  noir030_negative.nr  noir030_positive.nr  noir030_suppressed.nr  noir100_negative.nr  noir100_positive.nr  noir100_suppressed.nr  noir101_negative.nr  noir101_positive.nr  noir101_suppressed.nr  noir110_negative.nr  noir110_positive.nr  noir110_suppressed.nr  noir120_negative.nr  noir120_positive.nr  noir120_suppressed.nr
fixtures/noir_core/warnings_only/: Nargo.toml
fixtures/sarif/: noir_core_minimal.sarif.json
fixtures/text/: noir_core_minimal_with_suggestions.txt
fixtures/ui/cases/: noir100_magic_array_len.json.v0.5.0.snap  noir100_magic_array_len.sarif.v0.6.0.snap  noir100_magic_array_len.text.v0.4.0.snap  noir100_magic_array_len.text.v0.5.0.snap  noir100_magic_array_len.text.v0.6.0.snap
scripts/: install.sh
(+81 files in other folders)
