[workspace]
members = [
  "crates/aztec-lint-cli",
  "crates/aztec-lint-core",
  "crates/aztec-lint-rules",
  "crates/aztec-lint-aztec",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
aztec-lint-core = { path = "crates/aztec-lint-core" }
aztec-lint-rules = { path = "crates/aztec-lint-rules" }
aztec-lint-aztec = { path = "crates/aztec-lint-aztec" }

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
