[workspace]
members = [
  "crates/aztec-lint-cli",
  "crates/aztec-lint-core",
  "crates/aztec-lint-rules",
  "crates/aztec-lint-aztec",
  "crates/aztec-lint-sdk",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
aztec-lint-core = { version = "0.1.0", path = "crates/aztec-lint-core" }
aztec-lint-rules = { version = "0.1.0", path = "crates/aztec-lint-rules" }
aztec-lint-aztec = { version = "0.1.0", path = "crates/aztec-lint-aztec" }
aztec-lint-sdk = { version = "0.1.0", path = "crates/aztec-lint-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.8"
toml = "1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
