[package]
name = "aztec-lint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
aztec-lint-core.workspace = true
aztec-lint-rules.workspace = true
aztec-lint-aztec.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.13"
