[package]
name = "aztec-lint-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[[bin]]
name = "aztec-lint-cli"
path = "src/main.rs"

[[bin]]
name = "aztec-lint"
path = "src/bin/aztec-lint.rs"

[dependencies]
aztec-lint-core.workspace = true
aztec-lint-rules.workspace = true
aztec-lint-aztec.workspace = true
clap = { version = "4.5", features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
flate2 = "1.0"
self-replace = "1.5"
sha2 = "0.10"
tar = "0.4"
tempfile = "3.13"
ureq = "3.2"
zip = { version = "8.1", default-features = false, features = ["deflate"] }

[dev-dependencies]
assert_cmd = "2.0"
