[package]
name = "aztec-lint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["noir-compiler"]
noir-compiler = ["dep:fm", "dep:noirc_driver", "dep:noirc_frontend", "dep:noirc_errors"]

[dependencies]
serde.workspace = true
blake3.workspace = true
toml.workspace = true
fm = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "fm", optional = true }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "noirc_driver", optional = true }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "noirc_frontend", optional = true }
noirc_errors = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "noirc_errors", optional = true }

[dev-dependencies]
serde_json.workspace = true
tempfile = "3.13"
