[package]
name = "aztec-lint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["noir-compiler"]
noir-compiler = [
  "dep:fm",
  "dep:noirc_driver",
  "dep:noirc_frontend",
  "dep:noirc_errors",
  "dep:nargo",
  "dep:nargo_toml",
]
plugin-api = ["dep:aztec-lint-sdk"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
toml.workspace = true
aztec-lint-sdk = { workspace = true, optional = true }
fm = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "fm", optional = true }
noirc_driver = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "noirc_driver", optional = true }
noirc_frontend = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "noirc_frontend", optional = true }
noirc_errors = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "noirc_errors", optional = true }
nargo = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "nargo", optional = true }
nargo_toml = { git = "https://github.com/noir-lang/noir.git", rev = "12ecac9917f95d6896cfa79fcaad98cef3487f0f", package = "nargo_toml", optional = true }

[dev-dependencies]
tempfile = "3.13"
