[package]
name = "aztec-lint-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
default = ["noir-compiler"]
noir-compiler = [
  "dep:fm",
  "dep:noirc_driver",
  "dep:noirc_frontend",
  "dep:noirc_errors",
  "dep:nargo",
  "dep:nargo_toml",
]
plugin-api = ["dep:aztec-lint-sdk"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
toml.workspace = true
aztec-lint-sdk = { workspace = true, optional = true }
fm = { workspace = true, optional = true }
noirc_driver = { workspace = true, optional = true }
noirc_frontend = { workspace = true, optional = true }
noirc_errors = { workspace = true, optional = true }
nargo = { workspace = true, optional = true }
nargo_toml = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3.13"
