[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
aztec-lint-aztec.workspace = true
aztec-lint-core.workspace = true
serde_json.workspace = true
toml.workspace = true

[lints]
workspace = true
